--- a/AKS/tripviewer.yml
+++ b/AKS/tripviewer.yml
@@ -19,6 +19,11 @@ spec:
         image: registryhnj9475.azurecr.io/tripinsights/tripviewer:1.0
         ports:
         - containerPort: 80
+        env:
+          - name: USERPROFILE_API_ENDPOINT
+            value: "http://userprofile-svc:80"
+          - name: TRIPS_API_ENDPOINT
+            value: "http://trips-svc:80"
 ---
 apiVersion: v1
 kind: Service
