--- a/AKS/tripviewer.yml
+++ b/AKS/tripviewer.yml
@@ -4,6 +4,7 @@ metadata:
   name: tripviewer
   labels:
     app: tripviewer
+  namespace: web-dev
 spec:
   replicas: 1
   selector:
@@ -28,9 +29,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    service.beta.kubernetes.io/azure-load-balancer-internal: "true"  
   name: tripviewer-svc
   labels:
     run: tripviewer
+  namespace: web-dev
 spec:
   ports:
   - port: 80
