--- a/AKS/user-java.yml
+++ b/AKS/user-java.yml
@@ -4,6 +4,7 @@ metadata:
   name: user-java
   labels:
     app: user-java
+  namespace: api-dev
 spec:
   replicas: 1
   selector:
@@ -44,6 +45,7 @@ metadata:
   name: user-java-svc
   labels:
     run: user-java
+  namespace: api-dev
 spec:
   ports:
   - port: 80
