--- a/AKS/userprofile.yml
+++ b/AKS/userprofile.yml
@@ -4,6 +4,7 @@ metadata:
   name: userprofile
   labels:
     app: userprofile
+  namespace: api-dev
 spec:
   replicas: 1
   selector:
@@ -44,6 +45,7 @@ metadata:
   name: userprofile-svc
   labels:
     run: userprofile
+  namespace: api-dev
 spec:
   ports:
   - port: 80
